# llms-txt-generator

./: .gitignore  LLMS.txt specs and architecture.md  README.md  SCHEDULED_RUNS_IMPLEMENTATION.md  package-lock.json  package.json  turbo.json
.github/workflows/: ci-cd.yml
apps/scheduler/: Dockerfile  README.md  package.json  pyproject.toml  scheduler.py
apps/scheduler/tests/: test_scheduler.py
apps/web/: REFACTORING.md  TESTING_SUMMARY.md  jest.config.cjs  jest.setup.cjs  next.config.ts  package.json
apps/web/__tests__/: README.md
apps/web/__tests__/api/: llms-txt.test.ts  project-detail.test.ts  project-runs.test.ts  projects.test.ts  webhooks.test.ts
apps/web/app/: globals.css  google-auth.tsx  layout.tsx  page.tsx
apps/web/app/api/: projects.ts
apps/web/app/api/generate/: route.ts
apps/web/app/api/projects/: route.ts
apps/web/app/components/: CreateProjectModal.tsx  LoadingSpinner.tsx  MessageAlert.tsx  Navigation.tsx  NotFoundAlert.tsx  ProjectCard.tsx  ProjectDetails.tsx  RunCard.tsx  UnauthorizedAlert.tsx  WebhookCard.tsx  WebhookForm.tsx  index.ts
apps/web/app/projects/: page.tsx
apps/web/app/projects/[id]/: page.tsx
apps/web/app/utils/: helpers.ts
apps/web/types/: index.ts
apps/web/utils/cloud-tasks/: scheduler.ts
apps/web/utils/redis/: scheduler.ts
apps/worker/: .coverage  Dockerfile  README.md  cleanup_duplicates.py  package.json  pyproject.toml  pytest.ini  run_tests.py  test_supabase_query.py  worker.py
apps/worker/llms_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/worker/tests/: README.md  __init__.py  conftest.py  test_change_detection.py  test_crawler.py  test_data_fetcher.py  test_llms_generator.py  test_storage.py  test_worker.py
apps/worker/worker/: __init__.py  change_detection.py  cloud_tasks_client.py  constants.py  crawler.py  data_fetcher.py  database.py  db_utils.py  exceptions.py  llms_generator.py  s3_storage.py  scheduling.py  storage.py  webhooks.py
infra/: Dockerfile.worker  cloudrun-deploy.sh  github-actions.yml  schemas.sql
(+9 files in other folders)
