[project]
name = "llms-worker"
version = "0.0.0"
description = "Python worker for llms.txt generation"
authors = [{name="Your Name", email="you@example.com"}]
requires-python = ">=3.11"
dependencies = [
"python-dotenv >= 1.0.0",
"requests >=2.31.0",
"beautifulsoup4 >=4.12.2",
"lxml >=4.9.3",
"boto3",
"supabase >= 2.0.0"
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
